--- a/config/tCitation/gremlin-server.yaml
+++ b/config/tCitation/gremlin-server.yaml
@@ -20,7 +20,7 @@ port: 8182
 scriptEvaluationTimeout: 30000
 channelizer: org.apache.tinkerpop.gremlin.server.channel.WebSocketChannelizer
 graphs: {
-  graph: "C:\\Users\\Beast\\Documents\\IISc\\Research\\mtech-research\\config\\tCitation\\tCitation.properties"
+  graph: "/home/dreamlab/research/mtech-research/config/tCitation/tCitation.properties"
 }
 scriptEngines: {
   gremlin-groovy: {
