--- a/config/windows/iCall/gremlin-server.yaml
+++ b/config/windows/iCall/gremlin-server.yaml
@@ -20,7 +20,7 @@ port: 8182
 scriptEvaluationTimeout: 30000
 channelizer: org.apache.tinkerpop.gremlin.server.channel.WebSocketChannelizer
 graphs: {
-  graph: "C:\\Users\\Beast\\Documents\\IISc\\Research\\mtech-research\\config\\iCall\\iCall.properties"
+  graph: "C:\\Users\\Beast\\Documents\\IISc\\Research\\mtech-research\\config\\windows\\iCall\\iCall.properties"
 }
 scriptEngines: {
   gremlin-groovy: {
