--- a/config/iCall/iCall.properties
+++ b/config/iCall/iCall.properties
@@ -17,5 +17,5 @@
 gremlin.graph=org.apache.tinkerpop.gremlin.tinkergraph.structure.TinkerGraph
 gremlin.tinkergraph.vertexIdManager=LONG
 gremlin.tinkergraph.edgeIdManager=LONG
-gremlin.tinkergraph.graphLocation=C:\\Users\\Beast\\Documents\\IISc\\Research\\mtech-research\\dataset\\tCitation\\tCitation.ml
+gremlin.tinkergraph.graphLocation=/home/dreamlab/research/mtech-research/dataset/iCall/iCall.ml
 gremlin.tinkergraph.graphFormat=graphml
