--- a/config/tLDBC/tLDBC.properties
+++ b/config/tLDBC/tLDBC.properties
@@ -14,8 +14,8 @@
 # KIND, either express or implied.  See the License for the
 # specific language governing permissions and limitations
 # under the License.
-gremlin.graph=org.apache.tinkerpop.gremlin.tinkergraph.structure.TinkerGraph
-gremlin.tinkergraph.vertexIdManager=LONG
-gremlin.tinkergraph.edgeIdManager=LONG
-gremlin.tinkergraph.graphLocation=C:\\Users\\Beast\\Documents\\IISc\\Research\\mtech-research\\dataset\\tCitation\\tCitation.ml
-gremlin.tinkergraph.graphFormat=graphml
+gremlin.graph=org.apache.tinkerpop.gremlin.tinkergraph.structure.TinkerGraouph
+gremlin.tinkergraph.vertexIdManager=ANY
+gremlin.tinkergraph.edgeIdManager=ANY
+gremlin.tinkergraph.graphLocation=C:\\Users\\Beast\\Documents\\IISc\\Research\\mtech-research\\dataset\\tLDBC\\tLDBC.json
+gremlin.tinkergraph.graphFormat=graphson
