--- a/config/iCall/gremlin-server-neo4j.yaml
+++ b/config/iCall/gremlin-server-neo4j.yaml
@@ -30,13 +30,13 @@ port: 8182
 scriptEvaluationTimeout: 30000
 channelizer: org.apache.tinkerpop.gremlin.server.channel.WebSocketChannelizer
 graphs: {
-  graph: "C:\\Users\\Beast\\Documents\\IISc\\Research\\mtech-research\\config\\windows\\iCall\\iCall-neo4j.properties"}
+  graph: "/home/dreamlab/research/mtech-research/config/iCall/iCall-neo4j.properties"}
 scriptEngines: {
   gremlin-groovy: {
     plugins: { org.apache.tinkerpop.gremlin.server.jsr223.GremlinServerGremlinPlugin: {},
                org.apache.tinkerpop.gremlin.neo4j.jsr223.Neo4jGremlinPlugin: {},
                org.apache.tinkerpop.gremlin.jsr223.ImportGremlinPlugin: {classImports: [java.lang.Math], methodImports: [java.lang.Math#*]},
-               org.apache.tinkerpop.gremlin.jsr223.ScriptFileGremlinPlugin: {files: ["C:\\Users\\Beast\\Documents\\IISc\\Research\\mtech-research\\config\\windows\\iCall\\iCall-neo4j.groovy"]}}}}
+               org.apache.tinkerpop.gremlin.jsr223.ScriptFileGremlinPlugin: {files: ["/home/dreamlab/research/mtech-research/config/iCall/iCall-neo4j.groovy"]}}}}
 serializers:
   - { className: org.apache.tinkerpop.gremlin.driver.ser.GryoMessageSerializerV3d0, config: { ioRegistries: [org.apache.tinkerpop.gremlin.tinkergraph.structure.TinkerIoRegistryV3d0] }}            # application/vnd.gremlin-v3.0+gryo
   - { className: org.apache.tinkerpop.gremlin.driver.ser.GryoMessageSerializerV3d0, config: { serializeResultToString: true }}                                                                      # application/vnd.gremlin-v3.0+gryo-stringd
