--- a/config/tCitation/tCitation-neo4j.properties
+++ b/config/tCitation/tCitation-neo4j.properties
@@ -14,8 +14,22 @@
 # KIND, either express or implied.  See the License for the
 # specific language governing permissions and limitations
 # under the License.
-gremlin.graph=org.apache.tinkerpop.gremlin.tinkergraph.structure.TinkerGraph
-gremlin.tinkergraph.vertexIdManager=LONG
-gremlin.tinkergraph.edgeIdManager=LONG
-gremlin.tinkergraph.graphLocation=C:\\Users\\Beast\\Documents\\IISc\\Research\\mtech-research\\dataset\\tCitation\\tCitation.ml
-gremlin.tinkergraph.graphFormat=graphml
+
+# This is a sample configuration file for Neo4j.  Note that
+# TinkerPop does not include Neo4j dependencies in its
+# distributions.  To use this file, please ensure that Neo4j
+# dependencies are installed into Gremlin Server's path
+# with:
+#
+# gremlin-server.sh -i org.apache.tinkerpop neo4j-gremlin 3.y.z
+#
+# Note that unless under a commercial agreement with Neo4j, Inc.,
+# Neo4j is licensed AGPL.
+
+
+gremlin.graph=org.apache.tinkerpop.gremlin.neo4j.structure.Neo4jGraph
+gremlin.neo4j.directory=/tmp/neo4j
+gremlin.neo4j.conf.dbms.auto_index.nodes.enabled=true
+#gremlin.neo4j.conf.dbms.auto_index.nodes.keys=
+gremlin.neo4j.conf.dbms.auto_index.relationships.enabled=true
+#gremlin.neo4j.conf.dbms.auto_index.relationships.keys=
